--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,12 @@
  * Author: Henry Newcomer
  ******************************/
 body {
+  background-color: #557799;
+  padding: 20px;
+}
+
+canvas {
   background-color: #3399ff;
+  width: 100%;
+  height: 100%;
 }
