--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,9 @@
  ******************************/
 body {
   background-color: #557799;
-  padding: 20px;
+  padding: 2px;
 }
 
 canvas {
-  background-color: #3399ff;
-  width: 100%;
-  height: 100%;
+  /* background-color: #3399ff; */
 }
